Fix codeblocks overflowing main content div

--- a/theme/css/partials/content.css
+++ b/theme/css/partials/content.css
@@ -1,4 +1,5 @@
 article {
   padding-top: 12px;
   margin: 0px 24px 24px 24px;
+  min-width: 0px;
 }
