--- a/theme/css/theme.css
+++ b/theme/css/theme.css
@@ -33,6 +33,10 @@ article ol, article p, article ul {
   margin-right: auto;
 }
 
+main {
+  min-width: 0;
+}
+
 .normalize-link {
   color: inherit;
   text-decoration: none;
@@ -52,6 +56,7 @@ pre code {
   display: block;
   padding: 0.5em;
   border-radius: 4px;
+  overflow-x: auto;
 }
 
 .admonition {
